dark mode css fixed

--- a/src/style.css
+++ b/src/style.css
@@ -158,6 +158,7 @@ a {
 
     .search-filter-container {
         flex-direction: column;
+        align-items: center;
     }
     
 }
